Merge branch '01-add-front'
# Conflicts:
#	src/main/java/com/example/project/repository/EmployeeRepository.java
#	src/main/java/com/example/project/service/EmployeeService.java
#	src/main/resources/templates/layout.ftlh